2005-01-08  Bruno Haible  <bruno@clisp.org>

	* progtest.m4: Require autoconf >= 2.50.
	(AM_PATH_PROG_WITH_TEST): Emit some traces to the log file.
	* po.m4: Require autoconf >= 2.50.
	(AM_PO_SUBDIRS): Emit the tested program's output to the log file.
	Suggested by Yann Dirson <ydirson@altern.org>.

2004-06-01  Paul Eggert  <eggert@cs.ucla.edu>

	* longlong.m4, ulonglong.m4: Fix copyright date and/or serial number.

2004-09-05  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_INTL_SUBDIR): Test for CFPreferencesCopyAppValue.

2004-09-03  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_INTL_SUBDIR): Add a test for CFLocaleCopyCurrent.

2004-05-16  Bruno Haible  <bruno@clisp.org>

	* lcmessage.m4 (gt_LC_MESSAGES): Renamed from AM_LC_MESSAGES.
	* gettext.m4 (AM_INTL_SUBDIR): Update.
	Suggested by Alexandre Duret-Lutz.

2004-04-19  Bruno Haible  <bruno@clisp.org>

	* gettext.m4: Change jm_ to gl_ in AC_DEFINE'd names. Update all uses.

2004-04-19  Bruno Haible  <bruno@clisp.org>

	* inttypes_h.m4: Change jm_ to gl_ in cache variables as well.
	* stdint_h.m4: Likewise.
	* uintmax_t.m4: Likewise.

2004-04-18  Jim Meyering  <jim@meyering.net>

	* glibc21.m4: Change jm_ to gl_ in AC_DEFINE'd names. Update all uses.
	* intmax.m4: Likewise.
	* inttypes_h.m4: Likewise.
	* longlong.m4: Likewise.
	* stdint_h.m4: Likewise.
	* uintmax_t.m4: Likewise.
	* ulonglong.m4: Likewise.

2004-03-02  Bruno Haible  <bruno@clisp.org>

	* po.m4 (AM_POSTPROCESS_PO_MAKEFILE): For RESOURCESDLLFILES and
	CSHARPCATALOGS, extend the lang -> frobbedlang mapping so as to support
	Serbian and Uzbek locales.

2004-02-18  Bruno Haible  <bruno@clisp.org>

	* xsize.m4 (gl_XSIZE): Require AC_C_INLINE.
	Reported by Derek Robert Price <derek@ximbiot.com>.

2004-02-02  Bruno Haible  <bruno@clisp.org>

	* glibc2.m4: New file.
	* gettext.m4 (AM_INTL_SUBDIR): Require gt_GLIBC2.
	* Makefile.am (EXTRA_DIST): Add glibc2.m4.

2004-01-29  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.1 released.
